added new changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div>
+        <img src="images/e1534000-c398-4e8f-8848-d67bf0f86b7d.jpg" alt="Roy Richard">
+    </div>
     <h1>welcome to moringa school</h1>
     <h3>my hobbies</h3>
     <ul>
